Fixed maven project setup. Deleted unused FXML package